<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="#d4c1a0"
        android:layout_height="24dp"/>


    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/pgdish"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content"/>

    <customfonts.Textview_Lora_Italic
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30.7sp"
        android:textColor="#3d3b38"
        android:lineSpacingExtra="9.3sp"
        android:layout_marginLeft="35.1dp"
        android:layout_marginRight="35.1dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/select_your_favorite_type_of_dish"
        />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <ImageView
                android:layout_width="200dp"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_gravity="start"
                android:scaleType="fitXY"
                android:src="@drawable/dishtwo"
                android:layout_height="200dp"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/dishone"
                android:layout_height="200dp"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:scaleType="fitXY"
                android:src="@drawable/dishthree"
                android:layout_height="200dp"/>

        </LinearLayout>
    </HorizontalScrollView>

    <customfonts.Textview_Lora_Italic
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:textColor="#3d3b38"
        android:layout_gravity="center"
        android:lineSpacingExtra="7sp"
        android:gravity="center_horizontal"
        android:text="@string/fresh_fish"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        >




        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/buttondish"
            android:layout_gravity="center"/>



        <customfonts.Textview_Lora_Italic
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginRight="15.8dp"
            android:textColor="#8f8a83"
            android:lineSpacingExtra="4.6sp"
            android:gravity="end"
            android:text="@string/skip"
            android:layout_marginEnd="15.8dp" />


    </FrameLayout>


</LinearLayout>